INTEGRATION: CWS qadev19 (1.4.78); FILE MERGED 2004/09/17 12:00:28 sg 1.4.78.2: #i32878#CHG: fixed bugs 2004/08/27 15:17:07 sg 1.4.78.1: #i32942#CHG: initialize 'OperatingSystem' variable.